@@ -8,6 +8,6 @@
         android:id="@+id/tv_display_weather"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="22sp" />
+        android:textSize="22sp"/>
 
 </FrameLayout>
